# 002_EstudiantesAprendizajeEstadistico

./: .gitignore
semestre2026-1/Estudiantes/Garcia_10/: readme.md
semestre2026-1/Estudiantes/Garcia_77/: AGENT.md  README.md  runner.py  usage_guide.md
semestre2026-1/Estudiantes/Mora_862/Lab 5/: Readme.txt  (+1 more)
semestre2026-1/Estudiantes/Mora_862/Lab_4/linear_regression_gd/: INSTALAR.md  README.md  setup.cfg  setup.py
semestre2026-1/Estudiantes/Mora_862/Lab_4/linear_regression_gd/linear_regression_gd/: __init__.py  regression.py
semestre2026-1/Estudiantes/Mora_862/Lab_4/linear_regression_gd/linear_regression_gd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
semestre2026-1/Estudiantes/Moscoso_80/: AGENT.md  runner.py  usage_guide.md
semestre2026-1/Estudiantes/Usuga_10/: AgenPingui.ipynb  Lab2.ipynb  PinguiInformeclasico.ipynb  registro_interaccion_agente.md  reporte_final.html
semestre2026-1/Estudiantes/garcia_62/lab 4/: Lab_04_EL_COLAB.ipynb  README.md  pyproject.toml
semestre2026-1/Estudiantes/garcia_62/lab 4/docs/: USO.md
semestre2026-1/Estudiantes/garcia_62/lab 4/examples/: ejemplo_laboratorio.py  instalacion_y_uso.md
semestre2026-1/Estudiantes/garcia_62/lab 4/src/lab4_reglin/: __init__.py  core.py
semestre2026-1/Estudiantes/garcia_62/lab 4/src/lab4_reglin_gd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
semestre2026-1/Laboratorios/: Laboratorio_03_intuicion_estadistica_v1.ipynb  Laboratorio_03_intuicion_estadistica_v2.ipynb  Laboratorio_05_reg_multivariada_v2.ipynb  Laboratorio_06_normal_equations.ipynb  Laboratorio_06_normal_equations_v1.ipynb  Laboratorio_07_abc_modelo_v1.ipynb  Laboratorio_08_clasificacionLogistica.ipynb  Laboratorio_09_nn_zeroV1.ipynb
semestre2026-1/Sesiones/: Sesion_03_intuicion_estadistica_II_v1.ipynb
(+182 files in other folders)
