[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab4-reglin-gd"
version = "0.1.0"
description = "Libreria educativa de regresion lineal con funcion de coste y gradiente descendente"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Garcia_62" }
]
dependencies = [
  "numpy>=1.21"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
