[metadata]
name = linear_regression_gd
version = 1.0.0
author = Estudiante de Física Computacional II
author_email = estudiante@udea.edu.co
description = Librería de Regresión Lineal con Gradiente Descendente
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/estudiante/linear_regression_gd
project_urls =
    Bug Tracker = https://github.com/estudiante/linear_regression_gd/issues
    Documentation = https://github.com/estudiante/linear_regression_gd/blob/main/README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Education
    Topic :: Scientific/Engineering :: Mathematics

[options]
python_requires = >=3.7
install_requires =
    numpy>=1.21.0
    matplotlib>=3.4.0

[options.packages.find]
where = .
include = linear_regression_gd*
